tests/compile_fail/boxed_local.stderr
error[E0597]: `scope2` does not live long enough
  --> $DIR/boxed_local.rs:9:43
   |
7  |   let _boxed_local = {
   |       ------------ borrow later stored here
8  |     let mut scope2 = v8::HandleScope::new(&mut scope1);
9  |     let mut scope3 = v8::HandleScope::new(&mut scope2);
   |                                           ^^^^^^^^^^^ borrowed value does not live long enough
10 |     Box::new(v8::Integer::new(&mut scope3, 123))
11 |   };
   |   - `scope2` dropped here while still borrowed
